# dirty_manner_uiproto

./: .gitignore  CMakeLists.txt
Source/: DirtyMannerUI.h  GraphComponent.h  HeaderLoader.cpp  Main.cpp  PluginEditor.cpp  PluginEditor.h  WavetableFetcher.cpp  build_commands.txt
